airdrops, structures, loot & stuff
Airdrops now happen, some structures were (re)added, loot now spawns, working on horde spawning + some other stuff I can not remember